fixed button text overflow

--- a/css/footer.css
+++ b/css/footer.css
@@ -62,6 +62,7 @@ footer {
   flex-grow: 1;
   border-radius: 3px;
   border: 1px solid;
+  white-space: nowrap;
 }
 .footer-btn:hover {
   background-color: #ffa4d5;
@@ -85,5 +86,5 @@ footer {
   .footer-social > * {
     padding-left: 0 !important;
     padding-right: 0 !important;
-  }  
+  }
 }
